# mng

./: .gitignore  CMakeLists.txt  README.md  SConstruct  run_example.sh
examples/: CMakeLists.txt  SConscript
examples/hello/: CMakeLists.txt  SConscript  main.c
examples/hello_engine/: SConscript  main.c
examples/pong/: CMakeLists.txt  SConscript  app.c  app.h  ball.c  ball.h  debugger.c  debugger.h  main.c  utils.c  utils.h
include/mng/: color.h  drawingstates.h  engine.h  event.h  game.h  input_event.h  line.h  line2.h  loaders.h  math.h  point.h  point2.h  random.h  rect.h  renderer.h  renderstate.h  renderstates.h  resources.h  size.h  sprite.h  texture.h  timer.h  transform.h  types.h  vector2.h  window.h
src/: CMakeLists.txt  SConscript
src/mng/: CMakeLists.txt  SConscript  drawingstates.c  engine.c  engine_core.c  engine_core.h  game.c  loaders.c  macros.h  math.c  point.c  point2.c  random.c  rect.c  renderer.c  renderer_impl.h  renderstate.c  renderstates.c  resources.c  size.c  sprite.c  texture.c  texture_impl.h  timer.c  transform.c  types.c  vector2.c  window.c  window_impl.h
src/pong/: CMakeLists.txt  main.c
tools/: run_example.sh
